@@ -23,6 +23,7 @@ Now
  * GP
    - Add optimization.
    - Show parents of winner individual.
+   - Add IF_TOTAL criteria (count of IFs in program).
    * Static types
      + Remove types in file.
 
